--- a/html/template/breadcrumb.html
+++ b/html/template/breadcrumb.html
@@ -1380,7 +1380,7 @@
                     <div class="tab-pan active show " data-tabContent="1">
                       <div class="overflow-auto custom-scroll">
                         <div class="breadcrumb breadcrumb-style-3">
-                          <nav class="!text-white bg-info rounded-5 p-2">
+                          <nav class="!text-white bg-info rounded-5 px-2 py-0">
                             <ol class="flex items-center breadcrumb-list"> 
                               <li class="breadcrumb-items"><a href="javascript:void(0)">
                                   <svg class="!stroke-white"> 
@@ -1399,7 +1399,7 @@
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="overflow-auto custom-scroll"&gt;
    &lt;div class="breadcrumb breadcrumb-style-3"&gt;
-    &lt;nav class="text-white bg-info p-2"&gt;
+    &lt;nav class="px-2 py-0 text-white bg-info"&gt;
      &lt;ol class="flex items-center breadcrumb-list"&gt;
        &lt;li class="breadcrumb-items"&gt;
          &lt;a href="javascript:void(0)"&gt; +SVG_ICON("Home","stroke-white") &lt;/a&gt; Home
