--- a/html/template/ecommerce.html
+++ b/html/template/ecommerce.html
@@ -1029,7 +1029,7 @@
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-primary opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
                             <svg class="strong-hover-shake fill-primary 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
-                              <use href="../../../assets/svg/bold_sprite.svg#Money-Hand"></use>
+                              <use href="../../assets/svg/bold_sprite.svg#Money-Hand"></use>
                             </svg>
                           </div>
                           <div> 
@@ -1063,7 +1063,7 @@
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-secondary opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
                             <svg class="strong-hover-shake fill-secondary 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
-                              <use href="../../../assets/svg/bold_sprite.svg#Users"></use>
+                              <use href="../../assets/svg/bold_sprite.svg#Users"></use>
                             </svg>
                           </div>
                           <div> 
@@ -1097,7 +1097,7 @@
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-title opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
                             <svg class="strong-hover-shake fill-title 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
-                              <use href="../../../assets/svg/bold_sprite.svg#Medical"></use>
+                              <use href="../../assets/svg/bold_sprite.svg#Medical"></use>
                             </svg>
                           </div>
                           <div> 
@@ -1131,7 +1131,7 @@
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-warning opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
                             <svg class="strong-hover-shake fill-warning 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
-                              <use href="../../../assets/svg/bold_sprite.svg#Order"></use>
+                              <use href="../../assets/svg/bold_sprite.svg#Order"></use>
                             </svg>
                           </div>
                           <div> 
