--- a/html/template/modal.html
+++ b/html/template/modal.html
@@ -1890,7 +1890,7 @@
         <label class="modal-overlay peer-checked:block" for="modal-8"></label>
         <div class="modal max-w-sm peer-checked:opacity-100 peer-checked:visible dark:bg-sidebar-dark2">
           <div class="modal-body">
-            <form class="theme-form flex flex-col gap-3">
+            <form class="theme-form flex flex-col gap-3"> 
               <h3>Govo Account</h3>
               <p>Hello, enter your email id and password for log in to your account</p>
               <div>
@@ -1901,13 +1901,13 @@
               </div>
               <div class="flex justify-between items-center gap-1">
                 <div class="flex items-center gap-2">
-                  <label class="checkbox w-[1rem] h-[1rem]">  
+                  <label class="checkbox cursor-pointer w-[1rem] h-[1rem]">  
                     <input class="peer" type="checkbox"><span class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"></i></span>
                   </label><span>Remember Me</span>
                 </div>
                 <div class="!mb-0"><a href="forgot-password.html">Forgot Password? </a></div>
               </div>
-              <div class="!mb-0 mx-auto"><a class="btn btn-primary !text-white py-2" href="index.html">Sign in</a></div>
+              <div class="my-2 "><a class="btn btn-primary !text-white py-2 block" href="index.html">Sign in</a></div>
               <div>
                 <h4>Or Sign in with</h4>
               </div>
