--- a/assets/postcss/components/_collapse.css
+++ b/assets/postcss/components/_collapse.css
@@ -8,12 +8,13 @@
   }
 
   .close .accordionItemContent {
-    transition: height 2s ease-in-out;
+    transition: height 3s ease-in-out;
     @apply block float-left scale-y-0 h-0;
   }
 
   .open .accordionItemContent {
     @apply p-3 bg-white-light border-2 border-primary-light w-full mb-2 block scale-y-100 origin-top transform delay-100 ease-in-out;
+    transition: all 0.2s ease-in-out;
   }
 
   .open .accordionItemHeading {
