--- a/assets/pug/pages/template/avatars.pug
+++ b/assets/pug/pages/template/avatars.pug
@@ -497,19 +497,16 @@ html(lang='en')
                       div(class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]")
                         div.avatar.inline-flex
                           div.w-14.rounded.flex.justify-center.items-center.bg-gray-light(class="dark:bg-sidebar-dark2")
-                            span.text-3xl B
+                            span.text-3xl G
                         div.avatar.inline-flex
                           div.w-12.rounded.flex.justify-center.items-center.bg-gray-light(class="dark:bg-sidebar-dark2")
-                            span.text-2xl A
+                            span.text-2xl O
                         div.avatar.inline-flex
                           div.w-11.rounded.flex.justify-center.items-center.bg-gray-light(class="dark:bg-sidebar-dark2")
-                            span.text-xl  C 
+                            span.text-xl  V 
                         div.avatar.inline-flex
                           div.w-10.rounded.flex.justify-center.items-center.bg-gray-light(class="dark:bg-sidebar-dark2")
-                            span.text-lg  K 
-                        div.avatar.inline-flex
-                          div.w-9.rounded.flex.justify-center.items-center.bg-gray-light(class="dark:bg-sidebar-dark2")
-                            span.text-sm  Y
+                            span.text-lg  O 
                     div(data-tabContent="2" class="relative tab-pan copyParent group ")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
@@ -518,29 +515,24 @@ html(lang='en')
                           |&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
                           |    &lt;div class="inline-flex avatar"&gt;
                           |     &lt;div class="flex items-center justify-center rounded w-14 bg-gray-light dark:bg-sidebar-dark2"&gt;
-                          |       &lt;span class="text-3xl"&gt; B &lt;/span&gt;
+                          |       &lt;span class="text-3xl"&gt; G &lt;/span&gt;
                           |      &lt;/div&gt;
                           |    &lt;/div&gt; 
                           |    &lt;div class="inline-flex avatar"&gt;
                           |      &lt;div class="flex items-center justify-center w-12 rounded bg-gray-light dark:bg-sidebar-dark2"&gt;
-                          |        &lt;span class="text-2xl"&gt; A &lt;/span&gt;
+                          |        &lt;span class="text-2xl"&gt; O &lt;/span&gt;
                           |      &lt;/div&gt; 
                           |    &lt;/div&gt;
                           |    &lt;div class="inline-flex avatar"&gt;
                           |      &lt;div class="flex items-center justify-center rounded w-11 bg-gray-light dark:bg-sidebar-dark2"&gt;
-                          |       &lt;span class="text-xl"&gt; C &lt;/span&gt;
+                          |       &lt;span class="text-xl"&gt; V &lt;/span&gt;
                           |      &lt;/div&gt;
                           |    &lt;/div&gt;
                           |    &lt;div class="inline-flex avatar"&gt;
                           |      &lt;div class="flex items-center justify-center w-10 rounded bg-gray-light dark:bg-sidebar-dark2"&gt;
-                          |        &lt;span class="text-lg"&gt; K &lt;/span&gt;
+                          |        &lt;span class="text-lg"&gt; O &lt;/span&gt;
                           |      &lt;/div&gt;
                           |    &lt;/div&gt; 
-                          |    &lt;div class="inline-flex avatar"&gt;
-                          |      &lt;div class="flex items-center justify-center rounded w-9 bg-gray-light dark:bg-sidebar-dark2"&gt;
-                          |        &lt;span class="text-sm"&gt; Y &lt;/span&gt;
-                          |      &lt;/div&gt;
-                          |    &lt;/div&gt;
                           |&lt;/div&gt;
             div.col-span-4(class="2xl:col-span-6 2md:col-span-12") 
               div.card.tabs
