--- a/assets/pug/pages/template/breadcrumb.pug
+++ b/assets/pug/pages/template/breadcrumb.pug
@@ -350,7 +350,7 @@ html(lang='en')
                     div(data-tabContent="1" class="tab-pan active show ")
                       div(class="overflow-auto custom-scroll")
                         div.breadcrumb.breadcrumb-style-3
-                          nav(class="!text-white bg-info rounded-5 p-2")
+                          nav(class="!text-white bg-info rounded-5 px-2 py-0")
                             ol.flex.items-center.breadcrumb-list 
                               li.breadcrumb-items
                                 a(href="javascript:void(0)")
@@ -369,7 +369,7 @@ html(lang='en')
                         code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="overflow-auto custom-scroll"&gt;
                           |    &lt;div class="breadcrumb breadcrumb-style-3"&gt;
-                          |     &lt;nav class="text-white bg-info p-2"&gt;
+                          |     &lt;nav class="px-2 py-0 text-white bg-info"&gt;
                           |      &lt;ol class="flex items-center breadcrumb-list"&gt;
                           |        &lt;li class="breadcrumb-items"&gt;
                           |          &lt;a href="javascript:void(0)"&gt; +SVG_ICON("Home","stroke-white") &lt;/a&gt; Home
