--- a/assets/pug/pages/template/landing.pug
+++ b/assets/pug/pages/template/landing.pug
@@ -28,7 +28,7 @@ html(lang='en')
                     div(class="backdrop-blur-sm header-sticky top-0 left-0 w-full z-[100] bg-white relative")
                         div.container.relative
                             include ../../layout/header/landing-header 
-                    div(class="home-section lg:px-[15px] sm:pb-0 px-[calc(25px_+_(224_-_25)_*_((100vw_-_320px)_/_(1920_-_320)))] py-[calc(2.2rem_+_(5.5_-_2.2)_*_((100vw_-_320px)_/_(1920_-_320)))] relative h-[89%] lg:h-auto")
+                    div(class="home-section lg:px-[15px] sm:pb-0 px-[calc(25px_+_(224_-_25)_*_((100vw_-_320px)_/_(1920_-_320)))] py-[calc(2.2rem_+_(5.5_-_2.2)_*_((100vw_-_320px)_/_(1920_-_320)))] relative h-[89%] 4xl:h-[79%] 2xl:h-[69%] lg:h-auto")
                         div.grid.grid-cols-2.h-full           
                             div.col-span-1.h-full.flex.items-center(class="lg:mt-[-5px] lg:py-section-space lg:col-span-2 lg:text-center lg:max-w-[70%] 2md:max-w-[100%] lg:mx-auto lg:h-auto") 
                                 div(class="w-full") 
@@ -45,8 +45,8 @@ html(lang='en')
                                             span.text-sm.font-semibold Documentation 
                             div.col-span-1(class="lg:hidden")       
                                 div.relative(class="lg:w-[70%] m-auto")  
-                                    img(class="w-full transform -rotate-6 absolute top-[40px] right-[-310px] h-[660px] xl:right-[-200px] border border-white rounded-[20px] z-[3] 4xl:h-[590px] 4xl:right-[-260px]" src="../../assets/images/landing/dashboard/default.jpg" alt="banner")
-                                    img(class="w-full transform -rotate-6 absolute top-[180px] right-[-80px] h-[470px] xl:right-[-30px] border border-white rounded-[20px] z-[2] 4xl:h-[410px]" src="../../assets/images/landing/dashboard/ecommerce.jpg" alt="banner")
+                                    img(class="w-full transform -rotate-6 absolute top-[40px] right-[-310px] h-[660px] xl:right-[-200px] border border-white rounded-[20px] z-[3] 4xl:h-[590px] 2xl:h-[500px] 4xl:right-[-260px]" src="../../assets/images/landing/dashboard/default.jpg" alt="banner")
+                                    img(class="w-full transform -rotate-6 absolute top-[180px] right-[-80px] h-[470px] xl:right-[-30px] border border-white rounded-[20px] z-[2] 4xl:h-[410px] 2xl:h-[360px]" src="../../assets/images/landing/dashboard/ecommerce.jpg" alt="banner")
                         div 
                             span.text-primary.font-bold(class="text-[30px] font-caveat absolute top-[16%] right-[44%] transform -rotate-12 lg:hidden 4xl:right-[46%] xl:right-[48%]") Trending
                             img(src="../../assets/images/landing/svg/arrow.svg" class="trending-animate text-[30px] font-caveat absolute top-[17%] right-[39%] transform rotate-3 lg:hidden" alt="arrow")
