--- a/assets/pug/pages/template/modal.pug
+++ b/assets/pug/pages/template/modal.pug
@@ -768,7 +768,7 @@ html(lang='en')
         label.modal-overlay(class="peer-checked:block" for='modal-8')
         div.modal(class="max-w-sm peer-checked:opacity-100 peer-checked:visible dark:bg-sidebar-dark2")
           div.modal-body
-            form.theme-form.flex.flex-col.gap-3
+            form.theme-form.flex.flex-col.gap-3 
               h3 Govo Account
               p Hello, enter your email id and password for log in to your account
               div
@@ -777,15 +777,15 @@ html(lang='en')
                 input(type="password" placeholder="Password.." class="dark:bg-sidebar-dark")
               div.flex.justify-between.items-center.gap-1
                 div.flex.items-center.gap-2
-                  label.checkbox(class="w-[1rem] h-[1rem]")   
+                  label.checkbox.cursor-pointer(class="w-[1rem] h-[1rem]")   
                     input(type='checkbox' class="peer")
                     span.checkbox-indicator(class="peer-checked:!bg-primary !border-primary")  
                       i(data-feather="check")
                   span Remember Me
                 div(class="!mb-0")
                   a(href="forgot-password.html") Forgot Password? 
-              div(class="!mb-0 mx-auto")
-                a.btn.btn-primary(class="!text-white py-2" href="index.html") Sign in
+              div(class="my-2 ")
+                a.btn.btn-primary(class="!text-white py-2 block" href="index.html") Sign in
               div
                 h4 Or Sign in with
               div.social
