--- a/html/template/avatars.html
+++ b/html/template/avatars.html
@@ -1527,19 +1527,16 @@
                     <div class="tab-pan active show " data-tabContent="1">
                       <div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]">
                         <div class="avatar inline-flex">
-                          <div class="w-14 rounded flex justify-center items-center bg-gray-light dark:bg-sidebar-dark2"><span class="text-3xl">B</span></div>
+                          <div class="w-14 rounded flex justify-center items-center bg-gray-light dark:bg-sidebar-dark2"><span class="text-3xl">G</span></div>
                         </div>
                         <div class="avatar inline-flex">
-                          <div class="w-12 rounded flex justify-center items-center bg-gray-light dark:bg-sidebar-dark2"><span class="text-2xl">A</span></div>
+                          <div class="w-12 rounded flex justify-center items-center bg-gray-light dark:bg-sidebar-dark2"><span class="text-2xl">O</span></div>
                         </div>
                         <div class="avatar inline-flex">
-                          <div class="w-11 rounded flex justify-center items-center bg-gray-light dark:bg-sidebar-dark2"><span class="text-xl"> C </span></div>
+                          <div class="w-11 rounded flex justify-center items-center bg-gray-light dark:bg-sidebar-dark2"><span class="text-xl"> V </span></div>
                         </div>
                         <div class="avatar inline-flex">
-                          <div class="w-10 rounded flex justify-center items-center bg-gray-light dark:bg-sidebar-dark2"><span class="text-lg"> K </span></div>
-                        </div>
-                        <div class="avatar inline-flex">
-                          <div class="w-9 rounded flex justify-center items-center bg-gray-light dark:bg-sidebar-dark2"><span class="text-sm"> Y</span></div>
+                          <div class="w-10 rounded flex justify-center items-center bg-gray-light dark:bg-sidebar-dark2"><span class="text-lg"> O </span></div>
                         </div>
                       </div>
                     </div>
@@ -1548,29 +1545,24 @@
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"> <code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap items-center gap-[0.5rem] 2xl:gap-[0.375rem]"&gt;
    &lt;div class="inline-flex avatar"&gt;
     &lt;div class="flex items-center justify-center rounded w-14 bg-gray-light dark:bg-sidebar-dark2"&gt;
-      &lt;span class="text-3xl"&gt; B &lt;/span&gt;
+      &lt;span class="text-3xl"&gt; G &lt;/span&gt;
      &lt;/div&gt;
    &lt;/div&gt; 
    &lt;div class="inline-flex avatar"&gt;
      &lt;div class="flex items-center justify-center w-12 rounded bg-gray-light dark:bg-sidebar-dark2"&gt;
-       &lt;span class="text-2xl"&gt; A &lt;/span&gt;
+       &lt;span class="text-2xl"&gt; O &lt;/span&gt;
      &lt;/div&gt; 
    &lt;/div&gt;
    &lt;div class="inline-flex avatar"&gt;
      &lt;div class="flex items-center justify-center rounded w-11 bg-gray-light dark:bg-sidebar-dark2"&gt;
-      &lt;span class="text-xl"&gt; C &lt;/span&gt;
+      &lt;span class="text-xl"&gt; V &lt;/span&gt;
      &lt;/div&gt;
    &lt;/div&gt;
    &lt;div class="inline-flex avatar"&gt;
      &lt;div class="flex items-center justify-center w-10 rounded bg-gray-light dark:bg-sidebar-dark2"&gt;
-       &lt;span class="text-lg"&gt; K &lt;/span&gt;
+       &lt;span class="text-lg"&gt; O &lt;/span&gt;
      &lt;/div&gt;
    &lt;/div&gt; 
-   &lt;div class="inline-flex avatar"&gt;
-     &lt;div class="flex items-center justify-center rounded w-9 bg-gray-light dark:bg-sidebar-dark2"&gt;
-       &lt;span class="text-sm"&gt; Y &lt;/span&gt;
-     &lt;/div&gt;
-   &lt;/div&gt;
 &lt;/div&gt;</code></pre>
                     </div>
                   </div>
