--- a/html/template/landing.html
+++ b/html/template/landing.html
@@ -49,7 +49,7 @@
               </header>
             </div>
           </div>
-          <div class="home-section lg:px-[15px] sm:pb-0 px-[calc(25px_+_(224_-_25)_*_((100vw_-_320px)_/_(1920_-_320)))] py-[calc(2.2rem_+_(5.5_-_2.2)_*_((100vw_-_320px)_/_(1920_-_320)))] relative h-[89%] lg:h-auto">
+          <div class="home-section lg:px-[15px] sm:pb-0 px-[calc(25px_+_(224_-_25)_*_((100vw_-_320px)_/_(1920_-_320)))] py-[calc(2.2rem_+_(5.5_-_2.2)_*_((100vw_-_320px)_/_(1920_-_320)))] relative h-[89%] 4xl:h-[79%] 2xl:h-[69%] lg:h-auto">
             <div class="grid grid-cols-2 h-full">          
               <div class="col-span-1 h-full flex items-center lg:mt-[-5px] lg:py-section-space lg:col-span-2 lg:text-center lg:max-w-[70%] 2md:max-w-[100%] lg:mx-auto lg:h-auto"> 
                 <div class="w-full"> 
@@ -65,7 +65,7 @@
                 </div>
               </div>
               <div class="col-span-1 lg:hidden">      
-                <div class="relative lg:w-[70%] m-auto"> <img class="w-full transform -rotate-6 absolute top-[40px] right-[-310px] h-[660px] xl:right-[-200px] border border-white rounded-[20px] z-[3] 4xl:h-[590px] 4xl:right-[-260px]" src="../../assets/images/landing/dashboard/default.jpg" alt="banner"><img class="w-full transform -rotate-6 absolute top-[180px] right-[-80px] h-[470px] xl:right-[-30px] border border-white rounded-[20px] z-[2] 4xl:h-[410px]" src="../../assets/images/landing/dashboard/ecommerce.jpg" alt="banner"></div>
+                <div class="relative lg:w-[70%] m-auto"> <img class="w-full transform -rotate-6 absolute top-[40px] right-[-310px] h-[660px] xl:right-[-200px] border border-white rounded-[20px] z-[3] 4xl:h-[590px] 2xl:h-[500px] 4xl:right-[-260px]" src="../../assets/images/landing/dashboard/default.jpg" alt="banner"><img class="w-full transform -rotate-6 absolute top-[180px] right-[-80px] h-[470px] xl:right-[-30px] border border-white rounded-[20px] z-[2] 4xl:h-[410px] 2xl:h-[360px]" src="../../assets/images/landing/dashboard/ecommerce.jpg" alt="banner"></div>
               </div>
             </div>
             <div> <span class="text-primary font-bold text-[30px] font-caveat absolute top-[16%] right-[44%] transform -rotate-12 lg:hidden 4xl:right-[46%] xl:right-[48%]">Trending</span><img class="trending-animate text-[30px] font-caveat absolute top-[17%] right-[39%] transform rotate-3 lg:hidden" src="../../assets/images/landing/svg/arrow.svg" alt="arrow"><img class="absolute left-[7%] top-[8%] animate__animated animate__infinite animate__pulse animate__delay-3" src="../../assets/images/landing/svg/Group-4.svg" alt="shape"><img class="absolute left-[11%] bottom-0 animate__animated animate__infinite animate__pulse animate__delay-3 sm:hidden" src="../../assets/images/landing/svg/Group-5.svg" alt="shape"><img class="absolute left-[30%] top-[20%] animate__animated animate__infinite animate__pulse lg:hidden" src="../../assets/images/landing/svg/cross.svg" alt="cross"><img class="absolute left-[39%] bottom-[30%] lg:right-[8%] lg:left-unset lg:bottom-[25%] animate__animated animate__infinite animate__pulse xl:left-[44%]" src="../../assets/images/landing/svg/circle.svg" alt="circle">
