--- a/html/template/monochrome-mode.html
+++ b/html/template/monochrome-mode.html
@@ -1031,7 +1031,7 @@
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-success opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
                             <svg class="strong-hover-shake fill-success 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
-                              <use href="../../../assets/svg/bold_sprite.svg#User"></use>
+                              <use href="../../assets/svg/bold_sprite.svg#User"></use>
                             </svg>
                           </div>
                           <h5 class="text-lg font-bold text-title 3sm:text-base 4xl:text-base">Total Followers</h5>
@@ -1061,7 +1061,7 @@
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-title opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
                             <svg class="strong-hover-shake fill-title 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
-                              <use href="../../../assets/svg/bold_sprite.svg#Like"></use>
+                              <use href="../../assets/svg/bold_sprite.svg#Like"></use>
                             </svg>
                           </div>
                           <h5 class="text-lg font-bold text-title 3sm:text-base 4xl:text-base">Total Likes</h5>
@@ -1091,7 +1091,7 @@
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-secondary opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
                             <svg class="strong-hover-shake fill-secondary 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
-                              <use href="../../../assets/svg/bold_sprite.svg#Bold-Chat"></use>
+                              <use href="../../assets/svg/bold_sprite.svg#Bold-Chat"></use>
                             </svg>
                           </div>
                           <h5 class="text-lg font-bold text-title 3sm:text-base 4xl:text-base">Total Comment</h5>
@@ -1121,7 +1121,7 @@
                           <div class="p-[13px] 6xl:p-[10px] 5xl:p-[8px] rounded-full relative">
                             <div class="bg-warning opacity-25 absolute z-[1] inset-0 rounded-full"> </div>
                             <svg class="strong-hover-shake fill-warning 2xl:w-[20px] 2xl:h-[20px] 3xl:w-[18px] 3xl:h-[18px] lg:w-[18px] lg:h-[18px] 2sm:w-4 2sm:h-4 6xl:w-4 6xl:h-4 w-5 h-5 relative z-[2]"> 
-                              <use href="../../../assets/svg/bold_sprite.svg#Save"></use>
+                              <use href="../../assets/svg/bold_sprite.svg#Save"></use>
                             </svg>
                           </div>
                           <h5 class="text-lg font-bold text-title 3sm:text-base 4xl:text-base">Total Saved</h5>
